# nexus-market

./: .dockerignore  .gitignore  AGENTS.md  docker-compose.local.yaml  docker-compose.prod.yaml
app/: .env.example  .env.local  .env.prod  Dockerfile  entrypoint.prod.sh  justfile  nginx.conf  pyproject.toml
app/config/: settings.py  urls.py
app/core/: models.py  permissions.py  serializers.py  urls.py  views.py
app/core/management/commands/: populate_orders.py
app/core/migrations/: 0001_initial.py  0002_vendor_category_physicalproduct_digitalproduct.py
app/core/templates/core/: base.html  index.html  secret.html
app/core/templates/core/partials/: navbar.html
